--- a/index.styl
+++ b/index.styl
@@ -9,3 +9,8 @@ html, body
     min-height 100vh
     margin 0
     padding 0
+
+body
+    display flex
+    justify-content center
+    align-items center
