--- a/index.styl
+++ b/index.styl
@@ -11,6 +11,8 @@ html, body
     padding 0
 
 body
+    background-image linear-gradient(156deg, #9cecfb, #65c7f7, #0052d4)
+    color #fff
     display flex
     justify-content center
     align-items center
