--- a/index.styl
+++ b/index.styl
@@ -22,3 +22,4 @@ pre
     padding 0.5rem
     background-color hsla(120, 60%, 70%, 0.35)
     border-radius 0.5rem
+    box-shadow 2px 2px 6px rgba(0, 0, 0, 0.05)
